--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
+    id 'kotlin-android'
+
 }
 
 android {
